--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -78,7 +78,7 @@ BCOR5mm, % Binding correction
 
 \section*{Abstract} % This section will not appear in the table of contents due to the star (\section*)
 
-In this report we evaluated a remote campus network connected to the main campus by a radio link. The internet connection is located at the main campus. The evaluation was done by simulating the network. To model the network traffic properly we implemented common services like web browsing, FTP upload and video conferences. Additionally we assessed the possibility to add a CCTV service, which transfers a video stream to the main campus. At the end of this report, we are identifying bottlenecks and give an overview of possible improvements.
+In this report we evaluated a remote campus network connected to the main campus by a radio link. The Internet connection is located at the main campus. The evaluation was done by simulating the network. To model the network traffic properly we implemented common services like web browsing, FTP upload and video conferences. Additionally we assessed the possibility to add a CCTV service, which transfers a video stream to the main campus. At the end of this report, we are identifying bottlenecks and give an overview of possible improvements.
 
 \newpage % Start the article content on the second page, remove this if you have a longer abstract that goes onto the second page
 
@@ -127,7 +127,7 @@ For a detailed list of specific configuration parameters, see section \ref{sec:c
 \hline
   HTTP request length  & 8 KiB \\
   HTTP response length & exponential($\mu = 671539$) [see section \ref{subsec:traffic_mod}] \\
-  Idle interval        & exponential(20s) \\
+  Idle interval        & exponential(20 s) \\
 \multicolumn{2}{ l }{\textbf{CCTV application}} \\
 \hline
   Message length       & 10KiB \\
@@ -241,7 +241,7 @@ The first parameter to look at is the amount of web browsing clients. We expect 
 The second part is the CCTV. To determine the influence of the CCTV on the network performance, we either include or exclude the CCTV from the simulation.
 
 To determine the maximum number of clients to simulate, we looked at the scenario itself. An amount of 60 clients is a reasonable amount of students to be present in a $400m^{2}$ area. It can be assumed that they are surfing at the same time, if the lecture requires web research. To analyze the network thoroughly though, we need to make sure that the behavior with more clients does not change significantly. We found that it is not expected, that the behavior of the system changes significantly at a higher amount of clients, so we are able to extrapolate several network properties from the simulation results.
-To be able to extrapolate properly, we need to determine the incrementation of the amount of clients aswell. To receive a well formed graph, we should work with a low increment, when the network behavior changes significantly. At low numbers, the traffic share is higher, therefore we need a low increment. At higher numbers we can increase it. The resulting numbers of clients we simulated are:
+To be able to extrapolate properly, we need to determine the incrementation of the amount of clients as well. To receive a well formed graph, we should work with a low increment, when the network behavior changes significantly. At low numbers, the traffic share is higher, therefore we need a low increment. At higher numbers we can increase it. The resulting numbers of clients we simulated are:
 \begin{align*}
 N \in \{1,5,10,15,20,30,40,50,60\}
 \end{align*}
@@ -289,13 +289,13 @@ To estimate the average response time, we can then further divide the average re
 Todays response times for common home networks are usually below 5 seconds. For a temporary back-up solution such as the network at hand slightly higher response times can be considered acceptable. Therefore you can say that it is okay to wait for a response for 10 seconds.
 
 \subsubsection{FTP Upload}
-The FTP Upload is modeled as a continous TCP stream to the internet. It runs for the entire simulation. The only important characteristic is the average throughput. The user is just interested in the time the upload takes. We measured the average throughput by the total amount of bytes uploaded to the server divided by the simulation time.
+The FTP Upload is modeled as a continuous TCP stream to the Internet. It runs for the entire simulation. The only important characteristic is the average throughput. The user is just interested in the time the upload takes. We measured the average throughput by the total amount of bytes uploaded to the server divided by the simulation time.
 \begin{align*}
 \frac{\text{uploadedBits}}{\text{simTime}}
 \end{align*}
 
 \subsubsection{CCTV}
-The CCTV is used to monitor abnormal behavior at the remote campus. There are two characteristics, which can be considered. At first the delay of stream increases the reaction time of the staff. If the information arrives at the monitor one second late, it does not influence the reaction time of the staff in a significant way. Therefore it is neglectable.
+The CCTV is used to monitor abnormal behavior at the remote campus. There are two characteristics, which can be considered. At first the delay of stream increases the reaction time of the staff. If the information arrives at the monitor one second late, it does not influence the reaction time of the staff in a significant way. Therefore it is negligible.
 As of the conference the average packet loss rate influences the quality of the video stream. If the packet loss rate is higher than 5\% the video stream is considered not to be recognizable anymore. Therefore the packet loss rate should not exceed 5\%.
 
 \subsection{Bottleneck Identification}
@@ -308,11 +308,11 @@ Since our applications require a sufficient packet delay, it is also useful to r
 All of these measurements can be done at the remote router and main router to distinct between traffic directions.
 
 \subsubsection{Wireless Network}
-The practical throughput of a wireless network is much lower than the advertised theoretical maximum. This is due to collisions on the channel. So the wireless network can still be considered as a potential bottleneck, while its theoretical maximum bandwidth 56 Mbps is much higher than the 12Mbps of the radiolink. To evaluate the wireless network channel, the same statistics as of the radio link can be considered.
+The practical throughput of a wireless network is much lower than the advertised theoretical maximum. This is due to collisions on the channel. So the wireless network can still be considered as a potential bottleneck, while its theoretical maximum bandwidth 56 Mbps is much higher than the 12Mbps of the radio link. To evaluate the wireless network channel, the same statistics as of the radio link can be considered.
 Additionally it is useful to look at the number of collisions to have a good metric to assess the issues caused by the channel.
 
 \section{Simulation Evaluation}
-The following sections contain the seperated evaluation of the network with and without CCTV.
+The following sections contain the separated evaluation of the network with and without CCTV.
 We would like to mention that we did the simulation with an important change of a parameter increasing primarily the performance of all applications depending on short network delays. We reduced the maximum PPP queue length to 50. We found, that large packets of the CCTV cause a tremendous amount of queueing delay due to high transmission delays of queued up packets. By decreasing the queue size the impact of accumulated CCTV packets at the remote router queue on the video conference is decreased.
 
 \subsection{Network with CCTV}
@@ -323,7 +323,7 @@ This section contains the final evaluation of the network, when CCTV is included
   \caption{Throughputs of the important links of the simulated network including confidence intervals.} \label{fig:cctv_network_throughputs}
 \end{figure}
 
-The network throughputs are depicted in fig. \ref{fig:cctv_network_throughputs}. As expected the total rate of the radio link is slightly above the rate of the WLAN. This is due to the steady load, which is added directly by the CCTV stream. The remaining bandwidth is composed of the steady load of the video conference, the web browsing and FTP upload traffic. With a rising number of clients the traffic directed to the main campus decreases and the traffic to the remote campus increases. This can be explained by looking at the application throughputs depicted in \ref{fig:cctv_app_throughput_all}. With more clients the http traffic uses a higher share of bandwidth. In general one can argue, that the major amount of http traffic flows in the direction of the remote campus, while the traffic of the FTP upload flows to the main campus.
+The network throughputs are depicted in fig. \ref{fig:cctv_network_throughputs}. As expected the total rate of the radio link is slightly above the rate of the WLAN. This is due to the steady load, which is added directly by the CCTV stream. The remaining bandwidth is composed of the steady load of the video conference, the web browsing and FTP upload traffic. With a rising number of clients the traffic directed to the main campus decreases and the traffic to the remote campus increases. This can be explained by looking at the application throughputs depicted in \ref{fig:cctv_app_throughput_all}. With more clients the HTTP traffic uses a higher share of bandwidth. In general one can argue, that the major amount of HTTP traffic flows in the direction of the remote campus, while the traffic of the FTP upload flows to the main campus.
 \begin{figure}[!ht]
   \centering
   \includegraphics[width=\textwidth]{Figures/cctv/Application_Throughputs.png}
@@ -347,7 +347,7 @@ The important value of the data rates of the browsing clients is actually the da
   \caption{Response Time of a single HTTP request.} \label{fig:cctv_http_request_time}
 \end{figure}
 
-The adjusted data rate is calculated by applying the time a session was actually active instead of the whole simulation time. 
+The adjusted data rate is calculated by applying the time a session was actually active instead of the whole simulation time.
 
 If only one to five clients are using the network a comparably high data rate of roughly 100 KB/s is achieved. In combination with a mean reply length of 672 KB this results in an average waiting time of 6.7 seconds. This is already a really bad experience. You can argue that it is acceptable at the given circumstances. We argued before that an average waiting time of 10 seconds is acceptable in these circumstances. This time is exceeded, when more than 10 clients are using the network. The average HTTP Response Time is depicted in fig. \ref{fig:cctv_http_request_time}. Therefore 10 clients provide a maximum of the proposed network configuration.
 
@@ -358,9 +358,9 @@ The performance characteristics of the video conference and the CCTV are the pac
   \caption{Packet loss rates of the applications of the simulated network including confidence intervals.} \label{fig:cctv_app_packet_loss_rates}
 \end{figure}
 
-The packet loss rates of the CCTV stream starts at a comparably high packet loss rate and decreases up to 0 for a higher number of clients. When a low number of clients is using the network almost all tcp traffic is directed to the main campus. Therefore the congestion at the radio link causes the queues at the remote router to drop packets. Therefore increasing the packet loss rate of the CCTV stream. A packet loss rate of 5\% is not exceeded at any amount of clients. Therefore a good quality is to be expected.
+The packet loss rates of the CCTV stream starts at a comparably high packet loss rate and decreases up to 0 for a higher number of clients. When a low number of clients is using the network almost all TCP traffic is directed to the main campus. Therefore the congestion at the radio link causes the queues at the remote router to drop packets. Therefore increasing the packet loss rate of the CCTV stream. A packet loss rate of 5\% is not exceeded at any amount of clients. Therefore a good quality is to be expected.
 
-The packet loss rate of the stream directed to the professors laptop is low for a small number of clients and increases up to a rate of roughly 0.7\% at 10 clients and keeps steady from there on. A possible explanation for the low loss rate at the beginning, while the loss rate for CCTV is high is, that the packet size of the video stream is much smaller than the cctv stream packet size. While the CCTV packets arrive late due to transmission delay the video stream packets arrive faster and are therefore not considered lost.
+The packet loss rate of the stream directed to the professors laptop is low for a small number of clients and increases up to a rate of roughly 0.7\% at 10 clients and keeps steady from there on. A possible explanation for the low loss rate at the beginning, while the loss rate for CCTV is high is, that the packet size of the video stream is much smaller than the CCTV stream packet size. While the CCTV packets arrive late due to transmission delay the video stream packets arrive faster and are therefore not considered lost.
 
 The before mentioned loss rates are far below our threshold of 5\%. Therefore they are not a limiting factor on the network. The packet loss rate of the stream received by the conference laptop however reaches a value of 4.2\% at 60 clients. The overall graph suggests, that the 5\% mark is exceeded at about 90 clients. Since 90 clients are an unrealistic number of clients considering the scenario, the performance of the stream can still be considered acceptable. The increase of the packet loss rate is caused by the increasing amount of traffic directed to the remote campus clients and therefore causing packet drops at the main router and access point queues.
 \begin{figure}[!ht]
@@ -369,10 +369,10 @@ The before mentioned loss rates are far below our threshold of 5\%. Therefore th
   \caption{Average packet delays of the applications of the simulated network including confidence intervals.} \label{fig:cctv_app_packet_delays}
 \end{figure}
 
-The delay depicted in figure \ref{fig:cctv_app_packet_delays} are constantly low enough to be considered acceptable. The inverse behavior of the delays is caused by the direction of the expected traffic. At low client numbers only the queue at the remote router delays the packets. With an increasing number of clients the access point and the main router delay the packets due to the HTTP replies.
+The delay depicted in figure \ref{fig:cctv_app_packet_delays} is constantly low enough to be considered acceptable. The inverse behavior of the delays is caused by the direction of the expected traffic. At low client numbers only the queue at the remote router delays the packets. With an increasing number of clients the access point and the main router delay the packets due to the HTTP replies.
 
 \subsubsection{Bottleneck Analysis}
-The overall throughput of the network components was previously depicted in fig. \ref{fig:cctv_network_throughputs}. It shows that the radio link bandwidth is fully used at every number of clients. This is due to the TCP traffic caused by the FTP upload. The TCP protocol is designed to use all remaining bandwidth not used by steady load of the udp traffic. Since all TCP traffic is originated at the WLAN part of the network, it is expect that the WLAN throughput equals the throughput of the radio link without the steady load of the cctv, which is connected directly to the remote router.
+The overall throughput of the network components was previously depicted in fig. \ref{fig:cctv_network_throughputs}. It shows that the radio link bandwidth is fully used at every number of clients. This is due to the TCP traffic caused by the FTP upload. The TCP protocol is designed to use all remaining bandwidth not used by steady load of the udp traffic. Since all TCP traffic is originated at the WLAN part of the network, it is expect that the WLAN throughput equals the throughput of the radio link without the steady load of the CCTV, which is connected directly to the remote router.
 The packet drop rates of the network queues are depicted in fig. \ref{fig:cctv_netw_packet_drop_rates}.
 \begin{figure}[!ht]
   \centering
@@ -382,7 +382,7 @@ The packet drop rates of the network queues are depicted in fig. \ref{fig:cctv_n
 
 The drop rate of the WLAN is increasing monotonously, while the main router drop rate increases more steeply, but decreases at a higher number of clients. The remote router queue is around zero regardless. This is due to the fact, that the main TCP traffic directed to the main campus is the FTP upload. Since it is only one stream, it can perfectly adapt to the available bandwidth. Furthermore it indicates that the WLAN is used at maximum capacity, because even the 8KiB HTTP requests should cause congestion at the remote router. The WLAN is therefore filtering the traffic originating from the remote campus. So the packets actually reaching the remote router do not get dropped anymore. This means a usable capacity of the WLAN of 10Mbit, which is the bandwidth of the radio link minus the data rate of the CCTV.
 
-The steep increase of the drop rate at the main router indicates the impact of the HTTP requests. When a request reaches the internet, the server initiates a reply, which causes a congestion at the main router, because the radio link is fully in use at all times. With a low number of clients the number of requests increases linearly. Therefore the drop rates at the main router increase linearly as aswell. With the number of clients however the share of the bandwidth of each client decreases, this results in a longer session duration. A longer session duration means a decrease of the number of requests, since no new request is issued before the current request got served. This opposed effects increase the congestion at the main router up to 30 clients. Afterwards the secondary effect decreases the congestion caused by the primary effect.
+The steep increase of the drop rate at the main router indicates the impact of the HTTP requests. When a request reaches the Internet, the server initiates a reply, which causes a congestion at the main router, because the radio link is fully in use at all times. With a low number of clients the number of requests increases linearly. Therefore the drop rates at the main router increase linearly as as well. With the number of clients however the share of the bandwidth of each client decreases, this results in a longer session duration. A longer session duration means a decrease of the number of requests, since no new request is issued before the current request got served. This opposed effects increase the congestion at the main router up to 30 clients. Afterwards the secondary effect decreases the congestion caused by the primary effect.
 
 These effects however have no impact on the drop rates of the WLAN. The monotonous increase is just due to the rising number of participants in the WLAN network causing more packets to be dropped.
 
