--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -380,9 +380,9 @@ The packet drop rates of the network queues are depicted in fig. \ref{fig:cctv_n
 
 The drop rate of the WLAN is increasing monotonously, while the main router drop rate increases more steeply, but decreases at a higher number of clients. The remote router queue is around zero regardless. This is due to the fact, that the main TCP traffic directed to the main campus is the FTP upload. Since it is only one stream, it can perfectly adapt to the available bandwidth. Furthermore it indicates that the WLAN is used at maximum capacity, because even the 8KiB HTTP requests should cause congestion at the remote router. The WLAN is therefore filtering the traffic originating from the remote campus. So the packets actually reaching the remote router do not get dropped anymore. This means a usable capacity of the WLAN of 10Mbit, which is the bandwidth of the radio link minus the data rate of the CCTV.
 
-The steep increase of the drop rate at the main router indicates the impact of the HTTP requests. When a request reaches the internet, the server initiates a reply, which causes a congestion at the main router, because the radio link is fully in use at all times. With a low number of clients the increase of requests is primarily linear. Therefore the drop rates at the main router increase linearly as aswell. With the number of clients however the share of the bandwidth of each client decreases, this results in a longer session duration. A longer session duration means a decrease of the number of requests, since no new request is issued before the current request got served. This opposed effects increase the congestion at the main router up to 10 clients linearly. Afterwards the secondary effect decreases the congestion caused by the primary effect, resulting in a logarithmic behavior of several curves. 
+The steep increase of the drop rate at the main router indicates the impact of the HTTP requests. When a request reaches the internet, the server initiates a reply, which causes a congestion at the main router, because the radio link is fully in use at all times. With a low number of clients the increase of requests is primarily linear. Therefore the drop rates at the main router increase linearly as aswell. With the number of clients however the share of the bandwidth of each client decreases, this results in a longer session duration. A longer session duration means a decrease of the number of requests, since no new request is issued before the current request got served. This opposed effects increase the congestion at the main router up to 10 clients linearly. Afterwards the secondary effect decreases the congestion caused by the primary effect, resulting in a logarithmic behavior of several curves. For instance the packet drop rate at the WLAN access point. The queues at the access point and the main router contain the same traffic. Since the congestion at the access point continously rises, the access point reduces the request throughput, which causes the congestion and therefore drop rate of the main router to finally go down, when 30 web clients and more use the network.
+With more than 30 to 40 clients, the access point and therefore the WLAN takes over the role of the crucial bottleneck. 
 
-These effects however have no impact on the drop rates of the WLAN. The monotonous increase is just due to the rising number of participants in the WLAN network causing more packets to be dropped.
 
 \subsection{Network without CCTV}
 As a second measure, the same simulations were conducted without any CCTV infrastructure present.
