--- a/report/ExamTaskReport.tex
+++ b/report/ExamTaskReport.tex
@@ -237,7 +237,7 @@ Since the FTP file transfer is a bulk upload rather than a continuous data strea
 The overall goal of the simulation is to evaluate how the previously described applications perform and what the bottlenecks of the network are. First we identified potentially changing parameters of the network. These are the variables we can modify between different simulation runs. Afterwards we identified critical performance characteristics of the applications and performance metrics of the potential bottlenecks.
 
 \subsection{Simulation Parameters}
-The first parameter to look at is the amount of web browsing clients. We expect a decreasing performance with the amount of clients rising.
+The first parameter to look at is the amount of Web Browsing Laptops. We expect a decreasing performance with the amount of clients rising.
 The second part is the CCTV. To determine the influence of the CCTV on the network performance, we either include or exclude the CCTV from the simulation.
 
 To determine the maximum number of clients to simulate, we looked at the scenario itself. An amount of 60 clients is a reasonable amount of students to be present in a $400m^{2}$ area. It can be assumed that they are surfing at the same time, if the lecture requires web research. To analyze the network thoroughly though, we need to make sure that the behavior with more clients does not change significantly. We found that it is not expected, that the behavior of the system changes significantly at a higher amount of clients, so we are able to extrapolate several network properties from the simulation results.
@@ -422,12 +422,12 @@ Due to the aforementioned ceiling, it is worthwhile to inspect the WLAN and the 
 \end{figure*}
 
 
-Fig. \ref{fig:app_throughput} summarizes the average application throughput with regard to the number of web browsing clients present in the network. In order to analyze the influence of the FTP and web browsing applications on the video quality, it is useful to first familiarize ourselves with the behavior of these applications.
+Fig. \ref{fig:app_throughput} summarizes the average application throughput with regard to the number of Web Browsing Laptops present in the network. In order to analyze the influence of the FTP and web browsing applications on the video quality, it is useful to first familiarize ourselves with the behavior of these applications.
 
-\paragraph{The Web browsers} are the parameter continuously changing throughout the simulation, as detailed in section \ref{sec:sim_plan}. Figure \ref{fig:app_throughput} shows that while the average overall HTTP traffic throughput rises with the number of web browsing clients, the average throughput achieved per browser decreases. Since bandwidth is limited, the TCP congestion control of each participant will negotiate a transmission rate that avoids collisions, throttling the overall transmission speed. Fig. \ref{fig:browser_sess_dur} verifies this: The average session duration per browser increases with the number of clients. According to the criteria determined in \ref{performance_characteristics}, browsing quality declines quickly: At less than 15 active clients, the quality threshold of 10 s is surpassed. Notably, the session duration grows linearly with $\geq$ 20 clients in the network.
+\paragraph{The Web browsers} are the parameter continuously changing throughout the simulation, as detailed in section \ref{sec:sim_plan}. Figure \ref{fig:app_throughput} shows that while the average overall HTTP traffic throughput rises with the number of Web Browsing Laptops, the average throughput achieved per browser decreases. Since bandwidth is limited, the TCP congestion control of each participant will negotiate a transmission rate that avoids collisions, throttling the overall transmission speed. Fig. \ref{fig:browser_sess_dur} verifies this: The average session duration per browser increases with the number of clients. According to the criteria determined in \ref{performance_characteristics}, browsing quality declines quickly: At less than 15 active clients, the quality threshold of 10 s is surpassed. Notably, the session duration grows linearly with $\geq$ 20 clients in the network.
 
 \paragraph{The FTP client}, shown in fig. \ref{fig:app_throughput} as well, experiences a %(TODO: characteristic)
-decline in throughput that is inverse to the increase in overall HTTP throughput. This also can be explained with TCP's congestion control mechanisms: the more bandwidth is used by web browsing clients, the more the FTP client is forced to react by limiting its bandwidth in order to avoid collisions. In short: the FTP client will use up as much bandwidth as you let them. It can be argued that the decrease in bandwidth is not as much of a nuisance as it is for the web browser users, since large file transfers are expected to take a while anyway.
+decline in throughput that is inverse to the increase in overall HTTP throughput. This also can be explained with TCP's congestion control mechanisms: the more bandwidth is used by Web Browsing Laptops, the more the FTP client is forced to react by limiting its bandwidth in order to avoid collisions. In short: the FTP client will use up as much bandwidth as you let them. It can be argued that the decrease in bandwidth is not as much of a nuisance as it is for the web browser users, since large file transfers are expected to take a while anyway.
 
 \begin{figure*}[!ht]%
 \makebox[\linewidth][c]{%
@@ -439,11 +439,14 @@ decline in throughput that is inverse to the increase in overall HTTP throughput
     \label{fig:conf_data}%
 \end{figure*}
 
-\paragraph{The video conference} has to be looked at as two distinct data flows: one going from the Professor's Laptop to the Video Conference Laptop, and one traveling the other way. This becomes apparent when looking at fig. \ref{fig:conf_data}, which depicts the average packet loss rate and delay for both directions in relation to the number of web browsing clients in the network. Note that the video conference is a UDP application periodically sending packets of a fixed size, and thus unaware of congestion or collisions.\\
-Since it is known that the that the delays of the radio and DFN links are 10 and 5 seconds respectively, all application delays must be at least 15s. While the delay at the Professor's Laptop stays very close to this ideal value and only increases marginally when adding new clients, the delay at the conference laptop appears to grow logarithmically. This can be explained by examining the average queue length at the Remote Access Point (see fig. \ref{fig:rap_queue_len}): With an increased number of web browsing clients receiving large HTTP responses, the amount of data being sent from the access point into the WLAN increases as well. In combination with the outgoing traffic of the FTP client, increased contention for the wireless medium causes incoming data to aggregate at the access point, resulting in a higher delay at the conference laptop.\\
+\paragraph{The video conference} has to be looked at as two distinct data flows: one going from the Professor's Laptop to the Video Conference Laptop, and one traveling the other way. This becomes apparent when looking at fig. \ref{fig:conf_data}, which depicts the average packet loss rate and delay for both directions in relation to the number of Web Browsing Laptops in the network. Note that the video conference is a UDP application periodically sending packets of a fixed size, and thus unaware of congestion or collisions.\\
+
+Since it is known that the that the delays of the radio and DFN links are 10 and 5 seconds respectively, all application delays must be at least 15 s. While the delay at the Professor's Laptop stays very close to this ideal value and only increases marginally when adding new clients, the delay at the conference laptop appears to grow logarithmically. This can be explained by examining the average queue length at the Remote Access Point (see fig. \ref{fig:rap_queue_len}): With an increased number of Web Browsing Laptops receiving large HTTP responses, the amount of data being sent from the access point into the WLAN increases as well. In combination with the outgoing traffic of the FTP client, increased contention for the wireless medium causes incoming data to aggregate at the access point, resulting in a higher delay at the conference laptop.\\
 % TODO: anhand des netzwerks ableiten dass die queue aus gründen logarithmisch (und nciht zB quadratisch) wächst
-The packet loss at the Conference Laptop can be explained as a combination of collisions occurring in the WLAN, packet loss at the Main Router and an increase in HTTP response traffic. From 1 to 10 web browsing clients, the video conference sees a slight decrease in its loss rate from 2\%. %to TODO.
-Around 0.5 to 2\% of this initial loss rate can be accounted for by the Main Router's loss rate, as illustrated in fig. \ref{fig:net_drop}. All additional packet losses may be caused by collisions in the WLAN (see fig. \ref{fig:rap_collisions}). Starting at 10 clients, the packet loss sees a steep increase, which correlates with the progress of the Main Router's packet drop rates. This increase, however, is dampened by the fact that with the number of web browsing clients, the amount of HTTP response traffic which shares the Main Router's queue with the video conference data rises as well. This way, less video data is discarded in total, as it makes up a smaller amount of the queue data.
+
+The packet loss at the Conference Laptop can be explained as a combination of collisions occurring in the WLAN, packet loss at the Main Router and an increase in HTTP response traffic.\\
+From 1 to 10 Web Browsing Laptops, the video conference sees a slight decrease in its loss rate from 2\%. After this, it increases linearly with a slope of about 0.56.%to TODO.
+Around 0.5 to 2\% of the initial loss rate (up until 10 clients) can be accounted for by the Main Router's loss rate, as illustrated in fig. \ref{fig:net_drop}. All additional packet losses may be caused by collisions in the WLAN (see fig. \ref{fig:rap_collisions}). Starting at 10 clients, the packet loss' steep increase correlates with the progress of the Main Router's packet drop rates. Note that its slope is smaller than that of the Main Router packet loss, though: It is dampened by the fact that with the number of Web Browsing Laptops, the amount of HTTP response traffic which shares the Main Router's queue with the video conference data rises as well. This way, less video data is discarded in total, as it makes up a smaller amount of the queue data.
 % TODO: weniger schwammig.
 
 \subsubsection{Identified bottlenecks}
@@ -455,14 +458,14 @@ Around 0.5 to 2\% of this initial loss rate can be accounted for by the Main Rou
 \end{figure}
 
 
-The main bottleneck is the WLAN: as can be seen in fig. \ref{fig:net_throughput}, its throughput stagnates around 10 Mbit/s, staying below the 12 Mbit/s the radio link would theoretically be capable of transmitting. However, even the radio link itself is not fully occupied. One cause for this may be the drop rate of the Main Router that can be seen in fig. \ref{fig:net_drop} in combination with the increasing session durations shown in fig. \ref{fig:browser_sess_dur}: Until its peak at 20 Web Browsing Laptops, the Main Router is confronted with more traffic caused by HTTP responses and video conference data flowing from the professor to the remote site than it can handle. After 20 clients, the increased session duration has caused an overall smaller number of sessions to be active, resulting in fewer data to be transmitted by the Main Router through the radio link. While this relieves the Main Router's queue, it also decreases the overall throughput of the radio link.
+The main bottleneck is the WLAN: as can be seen in fig. \ref{fig:net_throughput}, its throughput stagnates around 10 Mbit/s, staying below the 12 Mbit/s the radio link would theoretically be capable of transmitting. However, even the radio link itself is not fully occupied, even though the combination of HTTP responses and video data would theoretically be able to exhaust it, leaving the access point as the only bottleneck. One cause for this may be the drop rate of the Main Router that can be seen in fig. \ref{fig:net_drop} in combination with the increasing session durations shown in fig. \ref{fig:browser_sess_dur}: Until its peak at 20 Web Browsing Laptops, the Main Router is confronted with more traffic caused by HTTP responses and video conference data flowing from the professor to the remote site than it can handle. This causes packet loss, which in turn prompts TCP to throttle its transmissions. After 20 clients, the resulting increased session duration has caused an overall smaller number of sessions to be active, resulting in fewer data to be transmitted by the Main Router through the radio link. While this relieves the Main Router's queue, it also decreases the overall throughput of the radio link.
 
-\subsubsection{Maxmimum number of web browsing clients}
-When the video conference is key,the maximum number of web browsing clients is reached when either the average packet loss exceeds the maximum of 5\% or the average delay exceeds the maximum of 100 ms.\\
-Assuming client packet loss is linear starting at 10 clients, the video conference packet loss will exceed its maximum when $\geq$ 90 web browsing clients are present.
- Even at 60 clients, the delay measured at the Conference Laptop does not significantly exceed half of the permitted maximum delay of 100 ms, as can be seen in Fig. \ref{fig:ploss}.When assuming logarithmic growth, unacceptable packet loss rates will occur long before the maximum delay threshold is reached. \\
+\subsubsection{Maxmimum number of Web Browsing Laptops}
+When the video conference is the only criterion for network quality,the maximum number of Web Browsing Laptops is reached when either the average packet loss exceeds the maximum of 5\% or the average delay exceeds the maximum of 100 ms.\\
+Assuming client packet loss is linear starting at 10 clients, the video conference packet loss will exceed its maximum when $\geq$ 90 Web Browsing Laptops are present.
+Even at 60 clients, the delay measured at the Conference Laptop does not significantly exceed half of the permitted maximum delay of 100 ms, as can be seen in Fig. \ref{fig:ploss}.When assuming logarithmic growth, unacceptable packet loss rates will occur long before the maximum delay threshold is reached. \\
 
-When taking the students' web browsing experience into account, however, the maximum number of clients is reached far quicker with the current setup. The acceptable response time of 10s is already reached with \textless 15 clients, as can be seen in fig. \ref{fig:browser_sess_dur}.% TODO: calculate exact number
+When taking the students' web browsing experience into account, however, the maximum number of clients is reached far quicker with the current setup. The acceptable response time of 10s is already reached with \textless 15 Web Browsing laptops present, as can be seen in fig. \ref{fig:browser_sess_dur}.% TODO: calculate exact number
 
 
 \section{Recommended Changes To The Network}
